@@ -123,24 +123,10 @@ typedef struct pngout_data_struct *pngout_data;
 typedef int boolean;
 #endif
 
-
-
 #ifndef INTEGER_TYPE
-/*
-#if SIZEOF_LONG > 4 
-typedef long integer;
-#ifdef HAVE_LABS
-#define MPOST_ABS labs
-#else
-#define MPOST_ABS abs
-#endif
-#else 
-*/
-/* !(SIZEOF_LONG > 4) */
 typedef int integer;
 #define MPOST_ABS abs
-/*#endif*/ /*  SIZEOF_LONG > 4 */
-#else /* INTEGER_TYPE defined */
+#else
 /* See source/texk/web2c/w2c/config.h */
 #if INTEGER_MAX == LONG_MAX /* this should mean INTEGER_TYPE == long */
 #ifdef HAVE_LABS
@@ -150,7 +136,7 @@ typedef int integer;
 #endif
 #else
 #define MPOST_ABS abs
-#endif /* if INTEGER_MAX == LONG_MAX */
+#endif /* if INTEGER_TYPE == long */
 #endif /* ifndef INTEGER_TYPE */
 
 
@@ -756,6 +742,7 @@ int max_print_line;     /* width of longest text lines output; should be at leas
 void *userdata; /* this allows the calling application to setup local */
 char *banner;   /* the banner that is printed to the screen and log */
 int ini_version;
+int utf8_mode;
 
 @ @<Dealloc variables@>=
 xfree (mp->banner);
@@ -775,6 +762,7 @@ mp->max_print_line = 100;
 set_lower_limited_value (mp->max_print_line, opt->max_print_line, 79);
 mp->halt_on_error = (opt->halt_on_error ? true : false);
 mp->ini_version = (opt->ini_version ? true : false);
+mp->utf8_mode = (opt->utf8_mode ? true : false);
 
 @ In case somebody has inadvertently made bad settings of the ``constants,''
 \MP\ checks them using a global variable called |bad|.
@@ -1679,7 +1667,7 @@ The user might want to write unprintable characters.
 
 @<Basic printing...@>=
 void mp_print_char (MP mp, ASCII_code k) {                               /* prints a single character */
-  if (mp->selector < pseudo || mp->selector >= write_file) {
+  if (mp->utf8_mode || mp->selector < pseudo || mp->selector >= write_file) {
     mp_print_visible_char (mp, k);
   } else if (@<Character |k| cannot be printed@>) {
     mp_print (mp, "^^");
@@ -2962,7 +2950,7 @@ void *mp_xmalloc (MP mp, size_t nmem, size_t size) {
     mp_jump_out (mp);
   }
 #endif
-  w = calloc(nmem, size); /* Todo: check an un-initialize use of w and replace calloc with malloc. */
+  w = calloc(nmem, size); /* TODO: check an un-initialize use of w and replace calloc with malloc. */
   if (w == NULL) {
     mp_fputs ("Out of memory!\n", mp->err_out);
     mp->history = mp_system_error_stop;
@@ -2972,11 +2960,15 @@ void *mp_xmalloc (MP mp, size_t nmem, size_t size) {
 }
 
 @ @<Internal library declarations@>=
-int mp_snprintf_res ;
+/*int mp_snprintf_res ;*/
 /* Some compilers (i.e. gcc 8.2.0 ) complained with the old */
 /* #define mp_snprintf (void)snprintf                       */
 /* about truncation. For the moment we store the result.    */
-#  define mp_snprintf mp_snprintf_res=snprintf
+/*#  define mp_snprintf mp_snprintf_res=snprintf            */
+/* Now gcc 10 does't like common symbols, so we switch back */ 
+/* to the old define. */
+#define mp_snprintf (void)snprintf     
+
 
 @* Dynamic memory allocation.
 
@@ -3286,6 +3278,7 @@ mp_begin_group, /* beginning of a group (\&{begingroup}) */
 mp_nullary, /* an operator without arguments (e.g., \&{normaldeviate}) */
 mp_unary, /* an operator with one argument (e.g., \&{sqrt}) */
 mp_str_op, /* convert a suffix to a string (\&{str}) */
+mp_void_op, /* convert a suffix to a boolean (\&{void}) */
 mp_cycle, /* close a cyclic path (\&{cycle}) */
 mp_primary_binary, /* binary operation taking `\&{of}' (e.g., \&{point}) */
 mp_capsule_token, /* a value that has been put into a token list */
@@ -4542,8 +4535,9 @@ for (k = 0; k < ' '; k++)
   mp->char_class[k] = invalid_class;
 mp->char_class['\t'] = space_class;
 mp->char_class['\f'] = space_class;
-for (k = 127; k <= 255; k++)
-  mp->char_class[k] = invalid_class;
+for (i=127;i<=255;i++) {
+   mp->char_class[i] = mp->utf8_mode ? letter_class : invalid_class;
+}
 
 @* The hash table.
 
@@ -5042,6 +5036,8 @@ mp_primitive (mp, "step", mp_step_token, 0);
 @:step_}{\&{step} primitive@>;
 mp_primitive (mp, "str", mp_str_op, 0);
 @:str_}{\&{str} primitive@>;
+mp_primitive (mp, "void", mp_void_op, 0);
+@:void_}{\&{void} primitive@>;
 mp_primitive (mp, "tension", mp_tension, 0);
 @:tension_}{\&{tension} primitive@>;
 mp_primitive (mp, "to", mp_to_token, 0);
@@ -5173,6 +5169,9 @@ mp_print (mp, "step");
 break;
 case mp_str_op:
 mp_print (mp, "str");
+break;
+case mp_void_op:
+mp_print (mp, "void");
 break;
 case mp_tension:
 mp_print (mp, "tension");
@@ -15851,7 +15850,7 @@ CONTINUE:
               number_to_scaled (stack_min (y_packet (mp->xy))) - number_to_scaled (stack_max (v_packet (mp->uv)))) {
             if (number_to_scaled (mp->cur_t) >= number_to_scaled (mp->max_t)) {
               if ( number_equal(mp->max_t, x_two_t) || number_greater(mp->max_t,x_two_t_low_precision)) {   /* we've done 17+2 bisections */
-                number_divide_int(mp->cur_t,1<<2);number_divide_int(mp->cur_tt,1<<2); /* restore values due bit precision */ 
+                number_divide_int(mp->cur_t,1<<2);number_divide_int(mp->cur_tt,1<<2); /* restore values due bit precision */
                 set_number_from_scaled (mp->cur_t, ((number_to_scaled (mp->cur_t) + 1)/2));
                 set_number_from_scaled (mp->cur_tt, ((number_to_scaled (mp->cur_tt) + 1)/2));
                 return;
@@ -20117,7 +20116,7 @@ line and preceded by a space or at the beginning of a line.
             txt[size] = '\0';
             ptr = txt;
         } else {
-            /* strip trailing whitespace, we have a |'\0'| so we are off by one */ 
+            /* strip trailing whitespace, we have a |'\0'| so we are off by one */
             /* |while ((size > 1) && (mp->char_class[(ASCII_code) txt[size-2]] == space_class| $\vbv\vbv$ |txt[size-2] == '\n')) | */
             while ((size > 1) && (mp->char_class[(ASCII_code) txt[size-1]] == space_class || txt[size-1] == '\n')) {
                 decr(size);
@@ -23765,6 +23764,25 @@ RESTART:
     mp->selector = mp->old_setting;
     mp->cur_exp.type = mp_string_type;
     goto DONE;
+    break;
+  case mp_void_op:
+  {
+    /* Convert a suffix to a boolean */
+    mp_value new_expr;
+    memset(&new_expr,0,sizeof(mp_value));
+    new_number(new_expr.data.n);
+    mp_get_x_next (mp);
+    mp_scan_suffix (mp);
+    if (cur_exp_node() == NULL) {
+        set_number_from_boolean (new_expr.data.n, mp_true_code);
+    } else {
+        set_number_from_boolean (new_expr.data.n, mp_false_code);
+    }
+    mp_flush_cur_exp (mp, new_expr);
+    cur_exp_node() = NULL; /* !! do not replace with |set_cur_exp_node()| !! */
+    mp->cur_exp.type = mp_boolean_type;
+    goto DONE;
+  }
     break;
   case mp_internal_quantity:
     /* Scan an internal numeric quantity */
